[metadata]
name = mashuhelpa
version = 1.17.0
author = Mashuhelpa
description = Mashumaro without inheritance"
long-description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dand-oss/mashuhelpa
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers

[options]
include_package_data = true
packages = mashuhelpa
python_requires = >=3.6
install_requires=
    mashumaro
    dataclasses; python_version == "3.6"

[options.package_data]
mashuhelpa = py.typed
